--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@
 </tr>
 
 <tr>
+<td>3</td>
+<td>2010</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>3 Boys Productions</td>
 <td>2004</td>
 <td>Publisher</td>
@@ -684,6 +691,13 @@
 <td>1992</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>100 Girls</td>
+<td>2004</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4858,6 +4872,13 @@
 
 <tr>
 <td>Ant</td>
+<td>2004</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ant</td>
 <td>2005</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
@@ -4924,6 +4945,13 @@
 <td>1986</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Anywhere</td>
+<td>2008</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -5113,6 +5141,97 @@
 <td>2005</td>
 <td>Marvel</td>
 <td><a href="AranaTheHeartOfTheSpider/AranaTheHeartOfTheSpider.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Arcana Comics</td>
+<td>2004</td>
+<td>Publisher</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Arcana Presents</td>
+<td>2008</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Arcana Studio Presents</td>
+<td>2004</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Arcana Studio Presents 51 Delta</td>
+<td>2010</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Arcana Studio Presents Arcana Team Up</td>
+<td>2010</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Arcana Studio Presents Continuum</td>
+<td>2011</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Arcana Studio Presents Daddy's Little Girl</td>
+<td>2011</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Arcana Studio Presents Devil's Bargain</td>
+<td>2004</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Arcana Studio Presents Free Comics Book Day: Go Fish!</td>
+<td>2004</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Arcana Studio Presents Pixies</td>
+<td>2011</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Arcana Studio Presents The Intrinsic</td>
+<td>2012</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Arcana Studio Presents The Steam Engins Of Ox</td>
+<td>2013</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Arcana Studio Presents The Steam Engines Of Oz: The Geared Levianthan</td>
+<td>2013</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -5459,13 +5578,6 @@
 </tr>
 
 <tr>
-<td>Ash And The Army Of Darkness</td>
-<td>2013</td>
-<td>Dynamite</td>
-<td><a href="Dynamite/Dynamite.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Army Of Two</td>
 <td>2010</td>
 <td>IDW</td>
@@ -5704,6 +5816,13 @@
 </tr>
 
 <tr>
+<td>Ash And The Army Of Darkness</td>
+<td>2013</td>
+<td>Dynamite</td>
+<td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ashes</td>
 <td>1990</td>
 <td>Caliber</td>
@@ -5736,6 +5855,13 @@
 <td>1996</td>
 <td>Antarctic Press</td>
 <td><a href="AntarcticPress/AntarcticPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Assassin</td>
+<td>2005</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -6317,6 +6443,13 @@
 <td>2011</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Avengelyne vs Koni Waves</td>
+<td>2009</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -6989,6 +7122,13 @@
 <td>2012</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Banzai Girls</td>
+<td>2007</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11142,6 +11282,13 @@
 </tr>
 
 <tr>
+<td>Burn</td>
+<td>2008</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Burning Fields</td>
 <td>2015</td>
 <td>Boom!</td>
@@ -13786,6 +13933,13 @@
 </tr>
 
 <tr>
+<td>Clockwork Girl</td>
+<td>2007</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Clone</td>
 <td>2012</td>
 <td>Image</td>
@@ -15329,6 +15483,13 @@
 <td>1985</td>
 <td>DC</td>
 <td><a href="CrisisOnInfiniteEarths/CrisisOnInfiniteEarths.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Criss Cross</td>
+<td>2005</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17003,6 +17164,13 @@
 <td>2014</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dead Men Tell No Tales</td>
+<td>2005</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -18700,6 +18868,13 @@
 </tr>
 
 <tr>
+<td>Don Bluth Presents Space Ace</td>
+<td>2009</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Don Dohler's Pro Junior</td>
 <td>1971</td>
 <td>Kitchen Sink</td>
@@ -19264,6 +19439,13 @@
 <td>2003</td>
 <td>CrossGen</td>
 <td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dragon's Lair</td>
+<td>2006</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20205,6 +20387,13 @@
 </tr>
 
 <tr>
+<td>El Arsenal</td>
+<td>2005</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>El Deafo</td>
 <td>2014</td>
 <td>Abrams</td>
@@ -20905,6 +21094,13 @@
 </tr>
 
 <tr>
+<td>Eve: Vampire Diva</td>
+<td>2007</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Even More Bad Parenting Advice</td>
 <td>2014</td>
 <td>Drawn &amp; Quarterly</td>
@@ -21231,6 +21427,20 @@
 <td>2017</td>
 <td>Dark Horse</td>
 <td><a href="EyeballKid/EyeballKid.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ezra</td>
+<td>2004</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ezra: the Egyptian Exchange</td>
+<td>2005</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -24271,6 +24481,13 @@
 </tr>
 
 <tr>
+<td>Gearhead</td>
+<td>2007</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Gears Of War</td>
 <td>2008</td>
 <td>IDW</td>
@@ -25580,6 +25797,13 @@
 </tr>
 
 <tr>
+<td>Greatest American Hero</td>
+<td>2008</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Greek Street</td>
 <td>2009</td>
 <td>Vertigo</td>
@@ -25972,6 +26196,13 @@
 </tr>
 
 <tr>
+<td>Grunts</td>
+<td>2006</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Grumpy Old Monsters</td>
 <td>2003</td>
 <td>IDW</td>
@@ -26153,6 +26384,13 @@
 </tr>
 
 <tr>
+<td>Gwaii</td>
+<td>2008</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>GWAR: Orgasmagedon</td>
 <td>2017</td>
 <td>Dynamite</td>
@@ -26276,6 +26514,13 @@
 <td>2013</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Halloween Comic Fest: Howard Lovecraft &amp; The Kingdom Of Madness</td>
+<td>2018</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -27151,6 +27396,13 @@
 <td>2003</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Helen Killer</td>
+<td>2007</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -28232,6 +28484,20 @@
 </tr>
 
 <tr>
+<td>Howard Lovecraft And The Frozen Kingdom</td>
+<td>2016</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Howard Lovecraft Big Book Of Summer Fun</td>
+<td>2018</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Howard Pyle</td>
 <td>1853</td>
 <td>Creator</td>
@@ -29244,6 +29510,13 @@
 <td>1999</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Intristic: Singularity Zero</td>
+<td>2014</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -30528,6 +30801,13 @@
 </tr>
 
 <tr>
+<td>John Henry: The Steam Age</td>
+<td>2012</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>John Kenn Mortensen</td>
 <td>1978</td>
 <td>Creator</td>
@@ -31232,6 +31512,34 @@
 <td>2005</td>
 <td>Icon</td>
 <td><a href="IconComics/IconComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Kade</td>
+<td>2003</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Kade: Pursuit</td>
+<td>2005</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Kade: Rising Sun</td>
+<td>2009</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Kade: Shiva's Sun</td>
+<td>2007</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -32271,6 +32579,41 @@
 </tr>
 
 <tr>
+<td>Koni Waves</td>
+<td>2006</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Koni Waves First Wave</td>
+<td>2007</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Koni Waves Ghouls Gone Wild</td>
+<td>2008</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Koni Waves/Demonslayer</td>
+<td>2007</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Koni Waves: The Perfect Wave</td>
+<td>2010</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Kore</td>
 <td>1992</td>
 <td>Image</td>
@@ -32611,6 +32954,13 @@
 <td>2019</td>
 <td>American Mythology</td>
 <td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Langley High</td>
+<td>2015</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -35212,6 +35562,13 @@
 </tr>
 
 <tr>
+<td>Marlow</td>
+<td>2008</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Marquis</td>
 <td>1997</td>
 <td>Caliber</td>
@@ -35965,6 +36322,13 @@
 <td>2015</td>
 <td>12 Gauge</td>
 <td><a href="12GaugeComics/12GaugeComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Matriarch</td>
+<td>2009</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -42348,6 +42712,13 @@
 </tr>
 
 <tr>
+<td>Power Of The Valkyrie</td>
+<td>2006</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Power Pack</td>
 <td>1984</td>
 <td>Marvel</td>
@@ -43569,6 +43940,13 @@
 <td>1947</td>
 <td>Creator</td>
 <td><a href="RayZone/RayZone.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Raygun</td>
+<td>2019</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -47074,6 +47452,13 @@
 </tr>
 
 <tr>
+<td>Shadowflame</td>
+<td>2007</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Shadowhawk</td>
 <td>1992</td>
 <td>Image</td>
@@ -48765,6 +49150,13 @@
 <td>2002</td>
 <td>Publisher</td>
 <td><a href="SparkplugComics/SparkplugComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sparks</td>
+<td>2008</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -50602,6 +50994,13 @@
 </tr>
 
 <tr>
+<td>Sundown</td>
+<td>2005</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sunfire And Big Hero Six</td>
 <td>1998</td>
 <td>Marvel</td>
@@ -51152,6 +51551,13 @@
 <td>1955</td>
 <td>Marvel</td>
 <td><a href="TalesOfJustice/TalesOfJustice.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tales Of Penance</td>
+<td>2008</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -53304,6 +53710,13 @@
 </tr>
 
 <tr>
+<td>Ultra Duck</td>
+<td>2011</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ultragirl</td>
 <td>1996</td>
 <td>Marvel</td>
@@ -54039,6 +54452,13 @@
 </tr>
 
 <tr>
+<td>Valiants</td>
+<td>2017</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Valkyrie!</td>
 <td>1987</td>
 <td>Eclipse</td>
@@ -54288,6 +54708,13 @@
 <td>2013</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Velvet Rope</td>
+<td>2008</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
 </tr>
 
 <tr>
