--- a/index.html
+++ b/index.html
@@ -1888,6 +1888,13 @@
 </tr>
 
 <tr>
+<td>Adventures Of Aspen Mascots</td>
+<td>2018</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Adventures Of Barry Ween, Boy Genius</td>
 <td>1999</td>
 <td>Image</td>
@@ -3405,6 +3412,13 @@
 <td>2014</td>
 <td>Marvel</td>
 <td><a href="AllNewDoop/Doop.html">Details</a></td>
+</tr>
+
+<tr>
+<td>All New Executive Assistant: Iris</td>
+<td>2013</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -5767,6 +5781,13 @@
 </tr>
 
 <tr>
+<td>Artifact One</td>
+<td>2018</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Artifacts</td>
 <td>2010</td>
 <td>Image</td>
@@ -5841,6 +5862,118 @@
 <td>2006</td>
 <td>Sparkplug</td>
 <td><a href="SparkplugComics/SparkplugComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aspen Comics</td>
+<td>2003</td>
+<td>Publisher</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aspen Mascots And The Portals Of Doom</td>
+<td>2019</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aspen Presents: The Adventures Of Psycho Bonkers</td>
+<td>2015</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aspen Presents: The Adventures Of The Aspen Universe</td>
+<td>2016</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aspen Seasons: Fall</td>
+<td>2005</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aspen Seasons: Spring</td>
+<td>2005</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aspen Seasons: Summer</td>
+<td>2006</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aspen Seasons: Winter</td>
+<td>2009</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aspen Showcase: Aspen Matthews</td>
+<td>2008</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aspen Showcase: Ember</td>
+<td>2009</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aspen Showcase: Grace</td>
+<td>2008</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aspen Showcase: Kiani</td>
+<td>2009</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aspen Sketchbook</td>
+<td>2003</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aspen Splash: Swimsuit Spectacular</td>
+<td>2006</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aspen Universe: Decimation</td>
+<td>2017</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aspen Universe: Revelations</td>
+<td>2016</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10911,10 +11044,17 @@
 </tr>
 
 <tr>
-<td>Broxen Axis</td>
+<td>Broken Axis</td>
 <td>1996</td>
 <td>Antarctic Press</td>
 <td><a href="AntarcticPress/AntarcticPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Broken Pieces</td>
+<td>2011</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10992,6 +11132,13 @@
 <td>1970</td>
 <td>Creator</td>
 <td><a href="BryanHitch/BryanHitch.html">Details</a></td>
+</tr>
+
+<tr>
+<td>BubbleGun</td>
+<td>2013</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -12962,6 +13109,20 @@
 </tr>
 
 <tr>
+<td>Charismagic</td>
+<td>2011</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Charismagic: the Death Princess</td>
+<td>2012</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Charlatan Ball</td>
 <td>2008</td>
 <td>Image</td>
@@ -13455,6 +13616,13 @@
 <td>2004</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Choose Your Own Aspen Adventure</td>
+<td>2017</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16222,6 +16390,13 @@
 </tr>
 
 <tr>
+<td>Damsels In Excess</td>
+<td>2014</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Damsels: Mermaids</td>
 <td>2013</td>
 <td>Dynamite</td>
@@ -17167,6 +17342,13 @@
 </tr>
 
 <tr>
+<td>Dead Man's Run</td>
+<td>2011</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dead Men Tell No Tales</td>
 <td>2005</td>
 <td>Arcana</td>
@@ -17752,6 +17934,13 @@
 <td>1955</td>
 <td>Marvel</td>
 <td><a href="DellaVision/DellaVision.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dellec</td>
+<td>2009</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21227,6 +21416,41 @@
 </tr>
 
 <tr>
+<td>Executive Assistant Iris</td>
+<td>2009</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Executive Assistant: Assassins</td>
+<td>2012</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Executive Assistant: Lotus</td>
+<td>2011</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Executive Assistant: Orchid</td>
+<td>2011</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Executive Assistant: Violet</td>
+<td>2011</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Executor</td>
 <td>2010</td>
 <td>Vertigo</td>
@@ -22088,10 +22312,24 @@
 </tr>
 
 <tr>
+<td>Fathom Annual</td>
+<td>2014</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fathom Press</td>
 <td>1990</td>
 <td>Publisher</td>
 <td><a href="FathomPress/FathomPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Fathom: Kiani</td>
+<td>2007</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -23379,6 +23617,13 @@
 <td>1941</td>
 <td>Ace</td>
 <td><a href="AceMagazines/AceMagazines.html">Details</a></td> 
+</tr>
+
+<tr>
+<td>Four Points</td>
+<td>2015</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -27140,6 +27385,13 @@
 </tr>
 
 <tr>
+<td>Haunted City</td>
+<td>2011</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Haunted Horror</td>
 <td>2012</td>
 <td>IDW</td>
@@ -28099,6 +28351,13 @@
 </tr>
 
 <tr>
+<td>Homecoming</td>
+<td>2012</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Homer The Happy Ghost</td>
 <td>1955</td>
 <td>Marvel</td>
@@ -28932,6 +29191,13 @@
 </tr>
 
 <tr>
+<td>Idolized</td>
+<td>2012</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>IDW</td>
 <td>1999</td>
 <td>Publisher</td>
@@ -29601,6 +29867,20 @@
 <td>2016</td>
 <td>Abrams</td>
 <td><a href="AbramsBooks/AbramsBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Iron And The Mainden</td>
+<td>2007</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Iron And The Mainden: Brutes, Bims And The City</td>
+<td>2008</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -30609,6 +30889,13 @@
 <td>2011</td>
 <td>Icon</td>
 <td><a href="IconComics/IconComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jirni</td>
+<td>2013</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -32831,6 +33118,20 @@
 </tr>
 
 <tr>
+<td>Lady Mechanika</td>
+<td>2010</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Lady Mechanika: The Collected Edtion</td>
+<td>2011</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Lady Pendragon</td>
 <td>1998</td>
 <td>Image</td>
@@ -33321,10 +33622,24 @@
 </tr>
 
 <tr>
+<td>Legend Of Oz: Wicked West</td>
+<td>2015</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Legend Of Supreme</td>
 <td>1994</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Legend Of The Shadow Clan</td>
+<td>2013</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -33395,6 +33710,13 @@
 <td>1991</td>
 <td>Vortex</td>
 <td><a href="Vortex/Vortex.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Legends Of Oz: Tik-Tok And The Kalidah</td>
+<td>2016</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -34137,6 +34459,20 @@
 <td>2018</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Lola XOXO</td>
+<td>2014</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Lola XOXO: Wasteland Madam</td>
+<td>2015</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -36940,6 +37276,167 @@
 </tr>
 
 <tr>
+<td>Michael Turner Presents: Aspen</td>
+<td>2003</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Michael Turner's Cannon: Dawn of War</td>
+<td>2004</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Michael Turner's Fathom</td>
+<td>2005</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Michael Turner's Fathom Beginnings</td>
+<td>2005</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Michael Turner's Fathom Blue Descent</td>
+<td>2010</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Michael Turner's Fathom Dawn Of War</td>
+<td>2004</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Michael Turner's Fathom Prelude</td>
+<td>2005</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Michael Turner's Fathom: Cannon Hawke</td>
+<td>2004</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Michael Turner's Fathom: Kiani</td>
+<td>2012</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Michael Turner's Fathom: Killian's Vessel</td>
+<td>2007</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Michael Turner's Fathom: The Adventures Of Ernie</td>
+<td>2014</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Michael Turner's Fathom: The Elite Saga</td>
+<td>2013</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Michael Turner's Soulfire</td>
+<td>2004</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Michael Turner's Soulfire Despair</td>
+<td>2012</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Michael Turner's Soulfire Faith</td>
+<td>2012</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Michael Turner's Soulfire Genesis</td>
+<td>2013</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Michael Turner's Soulfire Grace</td>
+<td>2012</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Michael Turner's Soulfire Hope</td>
+<td>2012</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Michael Turner's Soulfire Power</td>
+<td>2012</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Michael Turner's Soulfire Shadow Magic</td>
+<td>2008</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Michael Turner's Soulfire: Chaos Reign</td>
+<td>2006</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Michael Turner's Soulfire: Dying Of The Light</td>
+<td>2005</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Michael Turner's Soulfire: New World Order</td>
+<td>2009</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Michelangelo</td>
 <td>1475</td>
 <td>Creator</td>
@@ -37427,6 +37924,13 @@
 <td>2012</td>
 <td>Dark Horse</td>
 <td><a href="MindMgmt/MindMgmt.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mindfield</td>
+<td>2010</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -40650,6 +41154,13 @@
 </tr>
 
 <tr>
+<td>Oniba: Swords Of The Demon</td>
+<td>2015</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Only Skin</td>
 <td>2008</td>
 <td>Secret Acres</td>
@@ -41032,6 +41543,13 @@
 <td>1970</td>
 <td>Gemstone</td>
 <td><a href="Overstreet/Overstreet.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Overtaken</td>
+<td>2013</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -46242,6 +46760,13 @@
 </tr>
 
 <tr>
+<td>Santeria: The Goddess Kiss</td>
+<td>2016</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sapphire</td>
 <td>1990</td>
 <td>Aircel</td>
@@ -46665,6 +47190,13 @@
 <td>2010</td>
 <td>Universal</td>
 <td><a href="ScottPilgrim/ScottPilgrim.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Scourge</td>
+<td>2010</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -47557,6 +48089,13 @@
 </tr>
 
 <tr>
+<td>Shahrazed</td>
+<td>2015</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Shaman's Tears</td>
 <td>1993</td>
 <td>Image</td>
@@ -47918,6 +48457,13 @@
 <td>1994</td>
 <td>Marvel</td>
 <td><a href="Shroud/Shroud.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Shrugged</td>
+<td>2006</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -48884,6 +49430,13 @@
 <td>2005</td>
 <td>Alias</td>
 <td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Soulfire: Chaos Reign: Beginnings</td>
+<td>2006</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -53178,6 +53731,13 @@
 </tr>
 
 <tr>
+<td>Trish Out Of Water</td>
+<td>2013</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Troll Patrol</td>
 <td>1993</td>
 <td>Harvey</td>
@@ -57189,6 +57749,13 @@
 </tr>
 
 <tr>
+<td>Worlds Of Aspen</td>
+<td>2006</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Worlds Of Fear</td>
 <td>1952</td>
 <td>Fawcett</td>
@@ -58195,6 +58762,13 @@
 <td>1945</td>
 <td>Charlton</td>
 <td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Zoohunters</td>
+<td>2014</td>
+<td>Aspen</td>
+<td><a href="AspenComics/AspenComics.html">Details</a></td>
 </tr>
 
 <tr>
